# FastAPI-K8s-Launchpad

./: Makefile  README.md  docker-compose.yml
inventory_service/: Dockerfile  pyproject.toml
inventory_service/app/: main.py
kubernetes_manifests/: inventory-deployment.yaml  inventory-service.yaml  order-deployment.yaml  order-service.yaml
order_service/: Dockerfile  pyproject.toml
order_service/app/: main.py
